Make sure popup is visible

--- a/popup.css
+++ b/popup.css
@@ -5,6 +5,8 @@ html {
 body {
   margin: 0;
   overflow: hidden;
+  width: 600px;
+  height: 600px;
 }
 
 #mapView {
